version ?

* Added an option to use random records from file for url.
  One can load a 10000 records and use them in a random fashion for
  1000 clients. We are not ensuring uniquickness of records used.
  Two more tags added to assist in doing that: FORM_RECORDS_FILE_MAX_NUM
  the number of records to load from a records file, and FORM_RECORDS_RANDOM,
  which says to the program to use the records loading randomly and not to link
  each records to a client by index.
  File with example of usage added is: ./conf-examples/random_file_records.conf

version 0.42, stable, September 05, 2007, svn 503

* Detailed logging option (-x) added outputs to <batch-name>.log file all
   request and response headers and bodies. Recommended not to combine
  it with verbose -v.
  This option was suggested by Artur Barashev <artvbar@gmail.com> and
  is supposed to enable HTTP and FTP request/responses tracing for encrypted
  HTTPS/FTPS traffic, where sniffers are not helpful.

* CentOS 64-bit was reported not defining PAGE_SIZE in <asm/page.h>
  Added a workaround to enable compilation.

* When FRESH_CONNECT=1 tag is specified for FTP URLs, new 
  FTP connections have been opened in due course, but old FTP connections 
  were kept forever and not closed. The bugfix committed to SVN forces old 
  connections to be closed.

  Current behavior is the following:
   a) an established control FTP-connection is closed immediately just after a 
       file transfer is accomplished;
   b) an established data FTP-connection is not closed after transfer, but is kept 
      during sleeping time and goes closed only after a new data connection is opened;

  Current behavior still may require to define twice higher number of connections 
  allowed by your FTP server, than the number of clients in curl-loader.	
  Thanks to John Gatewood Ham <buraphalinuxserver@gmail.com> for
  reporting the problem and testing patches.


version 0.41, July 26 2007, svn 492
